--- a/src/ExistAll.Shepherd.Core/ExistAll.Shepherd.Core.csproj
+++ b/src/ExistAll.Shepherd.Core/ExistAll.Shepherd.Core.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Micri"></PackageReference>
+	</ItemGroup>
 </Project>
