--- a/src/ExistAll.Shepherd.Core/ExistAll.Shepherd.Core.csproj
+++ b/src/ExistAll.Shepherd.Core/ExistAll.Shepherd.Core.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
-	<ItemGroup>
-		
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="SimpleInjector" Version="4.0.11" />
+  </ItemGroup>
+
 </Project>
