--- a/src/Core/ExistsForAll.Shepherd.SimpleInjector/ExistsForAll.Shepherd.SimpleInjector.csproj
+++ b/src/Core/ExistsForAll.Shepherd.SimpleInjector/ExistsForAll.Shepherd.SimpleInjector.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>ExistAll.Shepherd.Core</AssemblyName>
+    <TargetFramework>netstandard1.5</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
