--- a/src/Core/ExistsForAll.Shepherd.SimpleInjector.Experimental/ExistsForAll.Shepherd.SimpleInjector.Experimental.csproj
+++ b/src/Core/ExistsForAll.Shepherd.SimpleInjector.Experimental/ExistsForAll.Shepherd.SimpleInjector.Experimental.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\ExistsForAll.Shepherd.SimpleInjector\ExistsForAll.Shepherd.SimpleInjector.csproj" />
+    <ProjectReference Include="..\ExistsForAll.Shepherd.SimpleInjector\ExistsForAll.Shepherd.SimpleInjector.csproj" />
   </ItemGroup>
 
 </Project>
