--- a/src/tests/ExistsForAll.Shepherd.SimpleInjector.UnitTests/ExistsForAll.Shepherd.SimpleInjector.UnitTests.csproj
+++ b/src/tests/ExistsForAll.Shepherd.SimpleInjector.UnitTests/ExistsForAll.Shepherd.SimpleInjector.UnitTests.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\ExistsForAll.Shepherd.SimpleInjector.Experimental\ExistsForAll.Shepherd.SimpleInjector.Experimental.csproj" />
     <ProjectReference Include="..\..\Core\ExistsForAll.Shepherd.SimpleInjector\ExistsForAll.Shepherd.SimpleInjector.csproj" />
-    <ProjectReference Include="..\..\ExistsForAll.Shepherd.SimpleInjector.Experimental\ExistsForAll.Shepherd.SimpleInjector.Experimental.csproj" />
   </ItemGroup>
 
 </Project>
