--- a/src/Core/ExistsForAll.Shepherd.SimpleInjector/ExistsForAll.Shepherd.SimpleInjector.csproj
+++ b/src/Core/ExistsForAll.Shepherd.SimpleInjector/ExistsForAll.Shepherd.SimpleInjector.csproj
@@ -14,9 +14,10 @@ Shepered can act as the application Composition Root.</Description>
     <RepositoryUrl>https://github.com/existall/Shepherd</RepositoryUrl>
     <RepositoryType>GIT</RepositoryType>
     <PackageTags>SimpleInjector Ioc ExistAll ExistsForAll Orchestration</PackageTags>
+    <Version>1.3.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SimpleInjector" Version="4.0.11" />
+    <PackageReference Include="SimpleInjector" Version="4.0.12" />
   </ItemGroup>
 </Project>
