Remove the option that Shepherd creates the container

--- a/src/Core/ExistsForAll.Shepherd.SimpleInjector/ExistsForAll.Shepherd.SimpleInjector.csproj
+++ b/src/Core/ExistsForAll.Shepherd.SimpleInjector/ExistsForAll.Shepherd.SimpleInjector.csproj
@@ -16,6 +16,9 @@ Shepered can act as the application Composition Root.</Description>
     <Version>1.5.0</Version>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SimpleInjector" Version="4.0.12" />
+    <PackageReference Include="SimpleInjector" Version="4.3.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Builder\" />
   </ItemGroup>
 </Project>
