--- a/src/Core/ExistsForAll.Shepherd.DependencyInjection/ExistsForAll.Shepherd.DependencyInjection.csproj
+++ b/src/Core/ExistsForAll.Shepherd.DependencyInjection/ExistsForAll.Shepherd.DependencyInjection.csproj
@@ -12,4 +12,6 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     </ItemGroup>
 
+    <Import Project="../../properties.props"/>
+
 </Project>
