--- a/src/Core/ExistsForAll.Shepherd.SimpleInjector/ExistsForAll.Shepherd.SimpleInjector.csproj
+++ b/src/Core/ExistsForAll.Shepherd.SimpleInjector/ExistsForAll.Shepherd.SimpleInjector.csproj
@@ -2,20 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.5</TargetFramework>
-    <Authors>Guy Ludvig</Authors>
-    <Company>ExistsForAll</Company>
-    <Product />
-    <Description>Shepherd is a highly extendable orchestrator pattern wrapping SimpleInjector in order to help register tasks more easily.
-      Shepherd out of the box help auto-register domain service and create modules for infrastructure registration.
-      Shepered can act as the application Composition Root.</Description>
-    <PackageProjectUrl>https://github.com/existall/Shepherd</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/existall/Shepherd/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/existall/Shepherd/master/art/exitsForAll_icon.png</PackageIconUrl>
-    <RepositoryUrl>https://github.com/existall/Shepherd</RepositoryUrl>
-    <RepositoryType>GIT</RepositoryType>
-    <PackageTags>SimpleInjector Ioc ExistAll ExistsForAll Orchestration</PackageTags>
-    <Version>2.0.0</Version>
-    <RootNamespace>ExistsForAll.Shepherd.SimpleInjector</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="SimpleInjector" Version="4.4.2" />
@@ -24,5 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ExistsForAll.Shepherd.Core\ExistsForAll.Shepherd.Core.csproj" />
   </ItemGroup>
+
+  <Import Project="../../properties.props"/>
 
 </Project>
