--- a/src/properties.props
+++ b/src/properties.props
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <Version>3.0.0</Version>
         <Authors>Guy Ludvig</Authors>
-        <Description>Shepherd is a highly extendable orchestrator pattern wrapping SimpleInjector in order to help register tasks more easily.
+        <Description>Shepherd is a highly extendable orchestrator pattern wrapping (SimpleInjector / Microsoft Dependency Injection) in order to help register tasks more easily.
             Shepherd out of the box help auto-register domain service and create modules for infrastructure registration.
             Shepered can act as the application Composition Root.
         </Description>
@@ -12,6 +12,6 @@
         <PackageIconUrl>https://raw.githubusercontent.com/existall/Shepherd/master/art/exitsForAll_icon.png</PackageIconUrl>
         <RepositoryUrl>https://github.com/existall/Shepherd</RepositoryUrl>
         <RepositoryType>GIT</RepositoryType>
-        <PackageTags>SimpleInjector Ioc ExistAll ExistsForAll Orchestration</PackageTags>
+        <PackageTags>SimpleInjector Ioc ExistAll ExistsForAll Orchestration AspNet Dependency-Injection</PackageTags>
     </PropertyGroup>
 </Project>
